--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,23 @@ body{
   background-color: rgb(239, 239, 239) !important;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #d2d2d2;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #8f8f8f;
+  /* border-radius: 24px; */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #01960dbc;
+}
